[project]
name = "database-layer"
version = "0.1.0"
description = "This module provides a lightweight, asynchronous database abstraction layer built with SQLAlchemy and Pydantic for CRUD operations."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic-settings>=2.7.1",
    "sqlalchemy[asyncio]>=2.0.36",
]

[project.optional-dependencies]

sqlite = [
    "aiosqlite>=0.20.0",
]

